# mini-vec-engine

./: .gitignore  Cargo.toml  DESIGN.md  LICENSE  README.md
.github/workflows/: ci.yml
benches/: engine_bench.rs
docs/: MILESTONES.md  PROJECT_PLAN.md  datafusion_comparison.md  db_kernel_plan_v4_raw.md
scripts/: bench-perf.sh
src/: bitmap.rs  lib.rs  main.rs  spsc.rs  timing.rs
src/bench_infra/: bench_env.rs  histogram.rs  latency_buf.rs  mod.rs  timer.rs
src/engine/: aggregate.rs  arena_agg.rs  bloom.rs  data_gen.rs  expr.rs  instrumented.rs  join.rs  mod.rs  naive.rs  parallel.rs  pruning.rs  simplify.rs  vectorized.rs
tests/: differential_test.rs
